--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "cookie-parser": "^1.4.5",
     "ethereumjs-testrpc": "^6.0.3",
     "express": "^4.16.3",
+    "firebase": "^9.22.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "password-hash": "^1.2.2",
     "request": "^2.88.2",
-    "solc": "^0.4.11",
+    "solc": "^0.4.26",
     "web3": "^0.19.1"
   },
   "scripts": {
